--- a/index.html
+++ b/index.html
@@ -1,25 +1,116 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>kiko milano</title>
-    <link rel="stylesheet" href="./css/style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>DarkFit</title>
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
 
-     <header class="topo">
-        <nav>
-    <ul>
-      <li>Maquiagem</li>
-      <li>Maquiagem</li>
-      <li>Maquiagem</li>
-      <li>Maquiagem</li>
-    </ul>
-  </nav>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <div class="container">
+        <a class="navbar-brand" href="#">LogoDarkFit</a>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuNavbar" aria-controls="menuNavbar" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse justify-content-center" id="menuNavbar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Início</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Sobre</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Treinos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Agendamento</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
   </header>
 
+  <main>
+    <section id="carouselDarkFit" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
 
+        <article class="carousel-item active">
+          <img src="image/home1.jpg" class="d-block w-100" alt="Imagem 1 - Treino">
+          <div class="overlay"></div>
+        </article>
 
+        <article class="carousel-item">
+          <img src="image/home4.jpg" class="d-block w-100" alt="Imagem 2 - Academia">
+          <div class="overlay"></div>
+        </article>
+
+        <article class="carousel-item">
+          <img src="image/home3.jpg" class="d-block w-100" alt="Imagem 3 - Equipamentos">
+          <div class="overlay"></div>
+        </article>
+
+      </div>
+
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselDarkFit" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselDarkFit" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </button>
+    </section>
+
+    <section class="content text-center">
+      <h1>Bem-vindo à DarkFit</h1>
+      <p>Com os melhores equipamentos e treinos para sua evolução.</p>
+    </section>
+
+ 
+  <section class="highlights-section py-5 text-white">
+    <div class="container">
+      <div class="row text-center">
+  
+        <div class="col-md-4 mb-4">
+          <div class="card h-100 bg-transparent border-0 text-white">
+            <div class="card-body">
+              <div class="fs-1 mb-3">🏋️‍♂️</div>
+              <h5 class="card-title">+30 Unidades</h5>
+              <p class="card-text">Estamos presentes em diversas regiões.</p>
+            </div>
+          </div>
+        </div>
+  
+        <div class="col-md-4 mb-4">
+          <div class="card h-100 bg-transparent border-0 text-white">
+            <div class="card-body">
+              <div class="fs-1 mb-3">🤝</div>
+              <h5 class="card-title">+100 Personais</h5>
+              <p class="card-text">Profissionais prontos para te acompanhar.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 mb-4">
+          <div class="card h-100 bg-transparent border-0 text-white">
+            <div class="card-body">
+              <div class="fs-1 mb-3">🔥</div>
+              <h5 class="card-title">Resultados Rápidos</h5>
+              <p class="card-text">Treinos eficazes para atingir seus objetivos.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  </main>
+
+  <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
